--- a/src/components/Header/index.less
+++ b/src/components/Header/index.less
@@ -1,4 +1,5 @@
 .header{
+    background-color: #fff;
     .header-top{
         height: 60px; // 设置当前标签的高度
         line-height: 60px; // 设置当前标签内容的行间距
@@ -12,7 +13,7 @@
         height: 40px;
         line-height: 40px;
         padding: 0 20px;
-        border-top: 1px solid #f9c700; 
+        border-top: 1px solid rgba(0, 0, 0, 0.65);
         .breadcrumb-title{
             text-align: center;
         }
@@ -20,6 +21,14 @@
             text-align: right;
             .date{
                 margin-right: 10px;
+            }
+            .dayPictureImg{
+
+                img{
+                    height: 18px;
+                    margin-right: 10px;
+                    margin-bottom: 3px;
+                }
             }
         }
     }
