--- a/src/style/common.less
+++ b/src/style/common.less
@@ -5,9 +5,10 @@
     }
     .main{
         height: calc(100vh);
+        background-color: #f1f3f5;
     }
     .content{
-        position: relative; // 相对定位, 正常padding20px
-        padding: 20px;
+        position: relative; // 相对定位
+        padding: 20px; // 主页面的内容内边距都间隔20px, 相当于外边的几个内容
     }
 }
