完成路由的bug

--- a/src/style/common.less
+++ b/src/style/common.less
@@ -6,6 +6,7 @@
     .main{
         height: calc(100vh);
         background-color: #f1f3f5;
+        overflow: auto;  // 超出页面高度 自动添加滚动
     }
     .content{
         position: relative; // 相对定位
